--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <p class="wow fadeInUp" data-wow-delay="0.2s">IMTAQ SHIGHOR BAITUL QUR’AN WONOGIRI
               I’DADUL MU’ALIMIN WA TAHFIZHUL QUR’AN <br> (Program Tahfizhul Qur’an Setara SMP) Tahun Ajaran 2023/2024.<br> KUOTA TERBATAS HANYA UNTUK 30 SANTRI PUTRA!</p>
             <div class="sub-form wow fadeInUp" data-wow-delay="0.3s">
-              <a href="#" class="btn btn-action wow fadeInUp" target="_blank">Daftar</a> 
-              <a href="https://drive.google.com/file/d/1JRj7aAsbujbUYwhPHdvvaRcXzeh-brk_/view?usp=share_link" class="btn btn-action wow fadeInUp" target="_blank">Brosur</a> 
+              <a href="#" class="btn btn-action wow fadeInUp" target="_blank">Daftar Sekarang</a> 
+              <a href="https://drive.google.com/file/d/1JRj7aAsbujbUYwhPHdvvaRcXzeh-brk_/view?usp=share_link" class="btn btn-action wow fadeInUp" target="_blank">Unduh Brosur</a> 
             </div>
           </div>
         </div>
