--- a/index.html
+++ b/index.html
@@ -253,19 +253,19 @@
     <!-- Footer Section -->
     <div class="footer" id="kontak">
       <div class="container">
-        <div class="col-md-7"> <img src="konten/logo.png" width="180" height="70" alt="Image" />
+        <div class="col-md-7"> <img src="konten/logo.png" width="200" height="75" alt="Image" />
           <p>Menjadi lembaga pendidikan tahfizh yang melahirkan generasi qur’ani, berakhlak mulia, mandiri, bermanfaat dan berprestasi.</p>
           <div class="footer-text">
             <p> Copyright © 2022 sasa. All Rights Reserved. Made with <i class="ion-heart"></i> by <a href="https://www.instagram.com/muhsamaan_/">sasaLens</a></p>
           </div>
         </div>
         <div class="col-md-5">
-            <h1>Contact Us</h1>
+            <h1>Kontak Kami</h1>
             <p>Jl. Cempaka 5 Pokoh RT 01/RW IV Kel. Wonoboyo, Kec. Wonogiri, Kabupaten Wonogiri, Jawa Tengah 57615</p>
-              <a href="https://www.facebook.com/assalamkutaibarat" target="_blank" ><i class="ion-social-facebook"></i></a>  
-              <a href="https://www.instagram.com/ponpes_assalamkubar/" target="_blank" ><i class="ion-social-instagram"></i></a>
+              <a href="https://www.facebook.com/bqwonogiri/" target="_blank" ><i class="ion-social-facebook"></i></a>  
+              <a href="https://www.instagram.com/baitul_quran_wonogiri/?hl=id" target="_blank" ><i class="ion-social-instagram"></i></a>
               <a href="#" ><i class="ion-social-twitter"></i></a>
-              <a href="https://www.youtube.com/channel/UCAqyJ__QX3b8IGfbj0YrwoA" target="_blank" ><i class="ion-social-youtube"></i></a>
+              <a href="https://www.youtube.com/channel/UClJKR6-GzLmdzq0nbmCwdHw?sub_confirmation=1" target="_blank" ><i class="ion-social-youtube"></i></a>
         </div>
       </div>
     </div>
