--- a/index.html
+++ b/index.html
@@ -207,32 +207,32 @@
             <h1 class="wow fadeInUp" data-wow-delay="0s">Galeri Baitul Qur'an Wonogiri</h1>
           </div>
           <div class="col-sm-4">
-            <div class="wow fadeInUp" data-wow-delay="0.4s">
+            <div class="wow fadeInUp" data-wow-delay="0.4s" style="margin-top: 50px;">
               <img src="konten/1.png" alt="" class="responsive-img materialboxed">
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="wow fadeInUp" data-wow-delay="0.4s">
+            <div class="wow fadeInUp" data-wow-delay="0.4s" style="margin-top: 50px;">
               <img src="konten/2.png" alt="" class="responsive-img materialboxed">
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="wow fadeInUp" data-wow-delay="0.4s">
+            <div class="wow fadeInUp" data-wow-delay="0.4s" style="margin-top: 50px;">
               <img src="konten/3.png" alt="" class="responsive-img materialboxed">
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="wow fadeInUp" data-wow-delay="0.4s">
+            <div class="wow fadeInUp" data-wow-delay="0.4s" style="margin: 50px 0 20px;">
               <img src="konten/4.png" alt="" class="responsive-img materialboxed">
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="wow fadeInUp" data-wow-delay="0.4s">
+            <div class="wow fadeInUp" data-wow-delay="0.4s" style="margin: 50px 0 20px;">
               <img src="konten/5.png" alt="" class="responsive-img materialboxed">
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="wow fadeInUp" data-wow-delay="0.4s">
+            <div class="wow fadeInUp" data-wow-delay="0.4s" style="margin: 50px 0 20px;">
               <img src="konten/6.png" alt="" class="responsive-img materialboxed">
             </div>
           </div>
